Bug 65287 - [IVB regression dp] *ERROR* mismatch in adjusted_mode.flags (expected 1, found 0)
Summary: [IVB regression dp] *ERROR* mismatch in adjusted_mode.flags (expected 1, foun...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium major
Assignee: Jesse Barnes
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-03 09:28 UTC by shui yangwei
Modified: 2017-10-06 14:46 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg: DP booting up with "Call Trace" and "ERROR" (115.47 KB, text/plain)
2013-06-03 09:28 UTC, shui yangwei
no flags Details

Description shui yangwei 2013-06-03 09:28:07 UTC
Created attachment 80193 [details]
dmesg: DP booting up with "Call Trace" and "ERROR"

Environment:
------------------
Kernel: (drm-intel-next-queued)92d44621ad2d083bc03920c904ca0a5eb10d9ded
Some additional commit info:
Author: Paulo Zanoni <paulo.r.zanoni@intel.com>
Date:   Fri May 31 16:33:24 2013 -0300

    drm/i915: add i915_ips_status debugfs entry


Description:
-----------------
With DP pipe plugged in, reboot machine, after booting up, we can see "Call Trace" and "ERROR" messages in dmesg.

[drm:intel_pipe_config_compare] *ERROR* mismatch in adjusted_mode.flags (expected 1, found 0)

We will bisect it tomorrow, if there's any advice, please comment. 


Reproduce Steps:
-----------------
1. plugged in DP pipe
2. reboot machine
3. checkout the dmesg
Comment 1 Daniel Vetter 2013-06-03 09:41:22 UTC
No need to bisect, it's a new self-check added in

commit 045ac3b5629d9711531a408e92f9074db6afe7ce
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Tue May 14 17:08:26 2013 -0700

    drm/i915: add encoder get_config function v5

One for Jesse to fix ;-)
Comment 2 Daniel Vetter 2013-06-16 11:55:07 UTC
Jesse?
Comment 3 Jesse Barnes 2013-06-25 20:19:49 UTC
Can you apply this patch so I can see which one is failing?

--- a/drivers/gpu/drm/i915/intel_display.c
+++ b/drivers/gpu/drm/i915/intel_display.c
@@ -8074,7 +8074,7 @@ intel_pipe_config_compare(struct drm_device *dev,
 
 #define PIPE_CONF_CHECK_FLAGS(name, mask)      \
        if ((current_config->name ^ pipe_config->name) & (mask)) { \
-               DRM_ERROR("mismatch in " #name " " \
+               DRM_ERROR("mismatch in " #name (#mask) " "         \
                          "(expected %i, found %i)\n", \
                          current_config->name & (mask), \
                          pipe_config->name & (mask)); \
Comment 4 Jesse Barnes 2013-06-25 20:20:39 UTC
Oops, I mean this one:

--- a/drivers/gpu/drm/i915/intel_display.c
+++ b/drivers/gpu/drm/i915/intel_display.c
@@ -8074,7 +8074,7 @@ intel_pipe_config_compare(struct drm_device *dev,
 
 #define PIPE_CONF_CHECK_FLAGS(name, mask)      \
        if ((current_config->name ^ pipe_config->name) & (mask)) { \
-               DRM_ERROR("mismatch in " #name " " \
+               DRM_ERROR("mismatch in " #name "(" #mask ") "      \
                          "(expected %i, found %i)\n", \
                          current_config->name & (mask), \
                          pipe_config->name & (mask)); \
Comment 5 Daniel Vetter 2013-06-28 08:28:06 UTC
Should be fixed with

commit b6b6cfc739dc879081dcc3fc25dcbea2ba1167d3
Author: Xiong Zhang <xiong.y.zhang@intel.com>
Date:   Fri Jun 28 12:59:06 2013 +0800

    drm/i915: correct intel_dp_get_config() function for DevCPT
Comment 6 shui yangwei 2013-07-01 07:02:03 UTC
(In reply to comment #5)
> Should be fixed with
> 
> commit b6b6cfc739dc879081dcc3fc25dcbea2ba1167d3
> Author: Xiong Zhang <xiong.y.zhang@intel.com>
> Date:   Fri Jun 28 12:59:06 2013 +0800
> 
>     drm/i915: correct intel_dp_get_config() function for DevCPT

Yes, this issue gone. Verified here.
Comment 7 shui yangwei 2013-07-01 09:04:08 UTC
I find this bug "*ERROR* mismatch in adjusted_mode.flags (expected 1, found 0)" disappeared, but the dmesg also not clean, so I file a new bug, and I comment here for tracing back.
Bug 66444 - [IVB DP] dmesg of machine boot up with "call trace" and "*ERROR* mismatch in clock (expected 28319, found 0"
Comment 8 Daniel Vetter 2013-07-01 09:22:46 UTC
Yeah, that's a new bug. See the kernel backtraces section in our bug filing BKM on how to distinguish different kinds of backtraces.
Comment 9 Elizabeth 2017-10-06 14:46:14 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.